--- a/05_spring/03_eventos/src/main/resources/templates/cadastro-sucesso.html
+++ b/05_spring/03_eventos/src/main/resources/templates/cadastro-sucesso.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,8 @@
 </head>
 <body>
     <script>
-        alert("Evento cadastrado com sucesso!")
-        window.loca
+        alert("Evento cadastrado com sucesso!");
+        window.location.href = "/";
     </script>
 </body>
 </html>
