--- a/05_spring/03_eventos/src/main/resources/templates/index.html
+++ b/05_spring/03_eventos/src/main/resources/templates/index.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Home - Eventos</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Eventos Spring</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  </head>
+  <body>
+    <!-- header -->
+    <header th:replace="~{navbar :: navbar}"></header>
 
-    <h1>Bem-vindo ao sistema de eventos 🎉</h1>
-
-    <!-- IMAGEM -->
-    <img src="/images/Casa.jpg" alt="Imagem de eventos" width="400">
-
-    <p>Gerencie seus eventos de forma simples.</p>
-
-    <nav>
-        <a href="/eventos">Ver eventos</a>
-        <br>
-        <a href="/eventos/novo">Cadastrar evento</a>
-    </nav>
-
-</body>
+    <!-- main -->
+    <main>
+        <div class="container">
+            <img src="img/home.png" alt="Home" />
+        </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  </body>
 </html>
 
