--- a/05_spring/03_eventos/src/main/resources/templates/navbar.html
+++ b/05_spring/03_eventos/src/main/resources/templates/navbar.html
@@ -9,10 +9,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link" th:class="${activePage == 'home' ? nav-link active :
+          ' nav-link '} " aria-current="page" th:href="@{/}">Home</a>
         </li>
         <li class="nav-item">
-          <a  class="nav-link" href="/cadastrarEvento">Cadastrar evento</a>
+         <a class="nav-link" th:class="${activePage == 'cadastrar' ? nav-link active :
+          ' nav-link '} " th:href="@{/cadastrarEvento}">Cadastrar evento</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
